k8s/customers-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - image: feralexis007/manantial-customers-service:dev-0cbbdac
          name: customers-service
          ports:
            - containerPort: 8081
