k8s/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
        - image: feralexis007/manantial-gateway:prod-afd5e19
          name: gateway-server
          ports:
            - containerPort: 8090
