k8s/mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo6
  template:
    metadata:
      labels:
        app: mongo6
    spec:
      containers:
        - image: mongo:6.0
          name: mongo6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo
              mountPath: /data/db
      volumes:
        - name: mongo
          persistentVolumeClaim:
            claimName: mongo-pvc
