k8s/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo6
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongo6
  type: ClusterIP
